--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>6.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>6.2.2</version>
         </dependency>
