--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-#spring.datasource.url=${database.url}
-#spring.datasource.username=${database.username}
-#spring.datasource.password=${database.password}
+spring.datasource.url=${database.url}
+spring.datasource.username=${database.username}
+spring.datasource.password=${database.password}
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.jpa.show-sql= true
-#spring.jpa.hibernate.ddl-auto= update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#
-#spring.main.allow-bean-definition-overriding=true
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.main.allow-bean-definition-overriding=true
 
 
 springdoc.api-docs.enabled=true
