--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>backend</name>
-    <description>backend</description>
+    <artifactId>springboot_exercise</artifactId>
+    <version>0.0.1</version>
+    <name>springboot_exercise</name>
+    <description>springboot_exercise</description>
     <properties>
         <java.version>17</java.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
