--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:21-jdk-slim
 ARG JAR_FILE=target/*.jar
-COPY ./target/springboot_exercise-0.0.1.jar app.jar
+COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
